[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-enhanced"
version = "0.2.0"
description = "Cursor agent wrapper with persistent history and Runtime-style tooling."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "MakeItTech"}]
keywords = ["cursor", "agent", "runtime", "assistant"]
dependencies = [
  "websockets>=12.0",
  "httpx>=0.24.0",
  "pyyaml>=6.0",
  "python-telegram-bot>=20.0",
]

[project.urls]
Homepage = "https://github.com/makeittech/cursor-enhanced"
Issues = "https://github.com/makeittech/cursor-enhanced/issues"

[project.scripts]
cursor-enhanced = "cursor_enhanced.cli:main"

[tool.setuptools]
packages = ["cursor_enhanced"]
py-modules = [
  "main",
  "mcp_tools",
  "runtime_core",
  "runtime_cursor_agent",
  "runtime_delegate_tool",
  "runtime_integration",
  "runtime_session_tools",
  "runtime_smart_delegate",
  "runtime_web_tools",
  "runtime_weather_tool",
  "telegram_integration",
  "tool_executor",
]
include-package-data = true
